--- a/resume/index.html
+++ b/resume/index.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-mail"></i></span>
-                        <span class="info"><a class="link-disguise" href="mailto:724355924@qq.com">724355924@qq.com</a></span>
+                        <span class="info"><a class="link-disguise" href="mailto:1055127249@qq.com">1055127249@qq.com</a></span>
                     </div>
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-link"></i></span>
@@ -175,7 +175,8 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>同花顺客户端科创板交易权限开通功能</p>
-                            <p class="common-p">技术：vue，webpack</p>
+                            <p class="common-p">技术：es6、vue全家桶、webpack</p>
+                            <p class="common-p">环境：macbook、sublime、git、同花顺app</p>
                         </dt>
                         <dd>
                             <ul>
@@ -193,7 +194,8 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>长江e号、官微各种h5营销活动(秒杀，转盘，答题)</p>
-                            <p class="common-p">技术：vue，webpack</p>
+                            <p class="common-p">技术：es6、vue全家桶、webpack</p>
+                            <p class="common-p">环境：macbook、sublime、git、长江e号、微信开发者工具</p>
                         </dt>
                         <dd>
                             <ul>
@@ -211,7 +213,8 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>长江证券官微投顾商城、l2付费订阅功能</p>
-                            <p class="common-p">技术：vue全家桶</p>
+                            <p class="common-p">技术：es6、vue全家桶、webpack</p>
+                            <p class="common-p">环境：macbook、sublime、git、微信开发者工具</p>
                         </dt>
                         <dd>
                             <ul>
@@ -229,7 +232,8 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐惠充app</p>
-                            <p class="common-p">技术：cordova + jquery + gulp + webpack + less + nginx + shell + https</p>
+                            <p class="common-p">技术：cordova + jquery + gulp + webpack + less + https</p>
+                            <p class="common-p">环境：windows、sublime、nginx、xshell</p>
                         </dt>
                         <dd>
                             <ul>
@@ -247,7 +251,8 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐业务管理平台</p>
-                            <p class="common-p">技术：vue全家桶 + es6 + lodash + nginx + shell + https</p>
+                            <p class="common-p">技术：vue全家桶 + es6 + lodash + https</p>
+                            <p class="common-p">环境：windows、sublime、nginx、xshell</p>
                         </dt>
                         <dd>
                             <ul>
@@ -264,6 +269,7 @@
                         <dt class="header">
                             <p>永乐惠充微信小程序，超伙物流动态小程序</p>
                             <p class="common-p">技术：微信小程序api + 微信开发者工具</p>
+                            <p class="common-p">环境：windows + sublime + wepy小程序框架 + 微信开发者工具</p>
                         </dt>
                         <dd>
                             <ul>
@@ -277,6 +283,7 @@
                         <dt class="header">
                             <p>永乐融通支付产品</p>
                             <p class="common-p">技术：bootstrap + jquery + ngiax + gulp</p>
+                            <p class="common-p">环境：windows + hbuild</p>
                         </dt>
                         <dd>
                             <ul>
@@ -303,6 +310,7 @@
                         <dt class="header">
                             <p>怡乐购pc端 —— b2b平台</p>
                             <p class="common-p">技术：jquery + jsp + tomcat</p>
+                            <p class="common-p">环境：windows + eclipse + java</p>
                         </dt>
                         <dd>
                             <ul>
@@ -316,6 +324,7 @@
                         <dt class="header">
                             <p>永乐生活微信站</p>
                             <p class="common-p">技术：微信JSSDK + jquery + jsp + svn + shell + ftp</p>
+                            <p class="common-p">环境：windows + eclipse + java</p>
                         </dt>
                         <dd>
                             <ul>
@@ -329,6 +338,7 @@
                         <dt class="header">
                             <p>永乐生活代理商前台 + 永乐生活代后台管理系统</p>
                             <p class="common-p">技术：jquery + easyUI + jsp + shell + ftp + svn</p>
+                            <p class="common-p">环境：windows + eclipse + java</p>
                         </dt>
                         <dd>
                             <ul>
@@ -342,6 +352,7 @@
                         <dt class="header">
                             <p>node.js + MongoDB博客个人平台</p>
                             <p class="common-p">技术：node.js + MongoDB + jade模板引擎 + RoboMongo</p>
+                            <p class="common-p">环境：macbook + sublime</p>
                         </dt>
                         <dd>
                             <ul>
@@ -353,6 +364,7 @@
                         <dt class="header">
                             <p><a href="http://www.ccbdd.com/2014/">爬虫社</a></p>
                             <p class="common-p">技术：jquery + html + css + flash</p>
+                            <p class="common-p">环境：window + Deamweawer</p>
                         </dt>
                         <dd>
                             <ul>
@@ -367,6 +379,7 @@
                         <dt class="header">
                             <p><a href="http://www.qjtrip.com/">千景网</a></p>
                             <p class="common-p">技术：jquery + html + css + flash</p>
+                            <p class="common-p">环境：window + Deamweawer</p>
                         </dt>
                         <dd>
                             <ul>
@@ -380,7 +393,7 @@
                 </div>
             </div>
             <a @click="backCard" class="fixed-btn cardd">卡片</a>
-            <a href="../吴长新-前端开发-个人简历.pdf" class="fixed-btn dlown">下载</a>
+            <a href="../吴长新-前端开发-简历.pdf" class="fixed-btn dlown">下载</a>
         </div>
     </template>
     <template id="index">
